处理部份颜色处理不正常的问题，处理某些图片加载崩溃的问题